<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.keteringapp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_menu"
        android:name="com.example.keteringapp.ui.menu.MenuFragment"
        android:label="@string/jenis_catering"
        tools:layout="@layout/fragment_menu" />

    <fragment
        android:id="@+id/nav_pesan"
        android:name="com.example.keteringapp.ui.pesan.PesanFragment"
        android:label="@string/pemesanan"
        tools:layout="@layout/fragment_pesan" />


</navigation>