<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bkgg">

    <TextView
        android:id="@+id/jenis_katering"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/aneetsans"
        android:text="@string/jenis_catering"
        android:textAlignment="center"
        android:textSize="40sp"
        android:textStyle="bold"
        android:textColor="@color/text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <View
        android:id="@+id/view_pesta"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="50dp"
        android:background="#946038"
        android:backgroundTint="#946038"
        app:layout_constraintTop_toBottomOf="@id/jenis_katering"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="170dp"/>


    <View
        android:id="@+id/view_khusus"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="20dp"
        android:background="#946038"
        android:backgroundTint="#946038"
        app:layout_constraintTop_toBottomOf="@id/view_pesta"
        app:layout_constraintLeft_toRightOf="@id/view_pesta"
        app:layout_constraintLeft_toLeftOf="@id/view_pesta"/>

    <View
        android:id="@+id/view_box"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="50dp"
        android:background="#946038"
        android:backgroundTint="#946038"
        app:layout_constraintTop_toBottomOf="@id/jenis_katering"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="170dp"/>

    <View
        android:id="@+id/view_kue"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="20dp"
        android:background="#946038"
        android:backgroundTint="#946038"
        app:layout_constraintTop_toBottomOf="@id/view_box"
        app:layout_constraintRight_toRightOf="@id/view_box"
        app:layout_constraintLeft_toLeftOf="@id/view_box"/>

    <ImageView
        android:id="@+id/pesta"
        android:layout_width="120dp"
        android:layout_height="72dp"
        android:layout_marginTop="30dp"
        android:onClick="showPesta"
        android:scaleType="fitCenter"
        app:layout_constraintLeft_toLeftOf="@id/view_pesta"
        app:layout_constraintRight_toRightOf="@id/view_pesta"
        app:layout_constraintTop_toTopOf="@id/view_pesta"
        app:srcCompat="@drawable/pesta1" />

    <ImageView
        android:id="@+id/box"
        android:layout_width="120dp"
        android:layout_height="72dp"
        android:layout_marginTop="30dp"
        android:onClick="showBox"
        app:layout_constraintLeft_toLeftOf="@id/view_box"
        app:layout_constraintRight_toRightOf="@id/view_box"
        app:layout_constraintTop_toTopOf="@id/view_box"
        app:srcCompat="@drawable/box1" />

    <ImageView
        android:id="@+id/khusus"
        android:layout_width="120dp"
        android:layout_height="72dp"
        android:onClick="showKhusus"
        app:srcCompat="@drawable/khusus1"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toTopOf="@id/view_khusus"
        app:layout_constraintRight_toRightOf="@id/view_khusus"
        app:layout_constraintLeft_toLeftOf="@id/view_khusus"/>

    <ImageView
        android:id="@+id/kue"
        android:layout_width="120dp"
        android:layout_height="72dp"
        app:srcCompat="@drawable/kue"
        android:onClick="showKue"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toTopOf="@id/view_kue"
        app:layout_constraintRight_toRightOf="@id/view_kue"
        app:layout_constraintLeft_toLeftOf="@id/view_kue"/>

    <TextView
        android:id="@+id/tv_pesta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:text="@string/catering_pesta"
        android:textSize="15dp"
        android:textColor="@color/text"
        app:layout_constraintTop_toBottomOf="@id/pesta"
        app:layout_constraintRight_toRightOf="@id/pesta"
        app:layout_constraintLeft_toLeftOf="@id/pesta"/>

    <TextView
        android:id="@+id/tv_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/catering_box"
        android:paddingTop="10dp"
        android:textSize="15dp"
        android:textColor="@color/text"
        app:layout_constraintTop_toBottomOf="@id/box"
        app:layout_constraintRight_toRightOf="@id/box"
        app:layout_constraintLeft_toLeftOf="@id/box"/>

    <TextView
        android:id="@+id/tv_khusus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/catering_khusus"
        android:paddingTop="10dp"
        android:textSize="15dp"
        android:textColor="@color/text"
        app:layout_constraintTop_toBottomOf="@id/khusus"
        app:layout_constraintRight_toRightOf="@id/khusus"
        app:layout_constraintLeft_toLeftOf="@id/khusus"/>

    <TextView
        android:id="@+id/tv_kue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/catering_kue"
        android:paddingTop="10dp"
        android:textSize="15dp"
        android:textColor="@color/text"
        app:layout_constraintTop_toBottomOf="@id/kue"
        app:layout_constraintRight_toRightOf="@id/kue"
        app:layout_constraintLeft_toLeftOf="@id/kue"/>

</androidx.constraintlayout.widget.ConstraintLayout>